--- a/package.json
+++ b/package.json
@@ -115,6 +115,10 @@
     "webpack-stream": "^5.1.1",
     "workbox-build": "^3.4.1",
     "workbox-cli": "^3.5.0",
-    "@storybook/html": "^4.0.12"
+    "@storybook/html": "^4.0.12",
+    "@storybook/react": "^4.0.9",
+    "@storybook/addon-actions": "^4.0.9",
+    "@storybook/addon-links": "^4.0.9",
+    "@storybook/addons": "^4.0.9"
   }
 }
