--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mocha": "mocha test/mocha/ --recursive",
     "coverage": "NODE_ENV=test istanbul cover node_modules/.bin/_mocha -- -- test/**/*.test.js",
     "frontendTests": "./node_modules/.bin/nightwatch --config nightwatch.conf.js --env chrome,firefox",
-    "storybook": "start-storybook -p 6006",
+    "storybook-for-html": "start-storybook -p 9001 -c .storybook-html",
+    "storybook-for-react": "start-storybook -p 8001 -c .storybook-react",
     "build-storybook": "build-storybook"
   },
   "sasslintConfig": "./.sass-lint.yml",
@@ -68,6 +69,11 @@
     "@babel/core": "^7.0.1",
     "@babel/plugin-transform-react-jsx": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@storybook/addon-actions": "^4.0.9",
+    "@storybook/addon-links": "^4.0.9",
+    "@storybook/addons": "^4.0.9",
+    "@storybook/html": "^4.0.12",
+    "@storybook/react": "^4.0.9",
     "autoprefixer": "^9.1.5",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.2",
@@ -107,6 +113,7 @@
     "rebuild-changed-entrypoints-webpack-plugin": "^1.0.1",
     "sass-lint": "^1.12.1",
     "sass-lint-auto-fix": "^0.15.0",
+    "sass-loader": "^7.1.0",
     "script-loader": "^0.7.2",
     "selenium-server": "^3.12.0",
     "vinyl-map": "^1.0.2",
@@ -114,11 +121,6 @@
     "webpack": "^4.18.0",
     "webpack-stream": "^5.1.1",
     "workbox-build": "^3.4.1",
-    "workbox-cli": "^3.5.0",
-    "@storybook/html": "^4.0.12",
-    "@storybook/react": "^4.0.9",
-    "@storybook/addon-actions": "^4.0.9",
-    "@storybook/addon-links": "^4.0.9",
-    "@storybook/addons": "^4.0.9"
+    "workbox-cli": "^3.5.0"
   }
 }
