--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "watch": "nodemon --watch ./ --watch views/ --watch controllers/ --watch build/ --ext js,hbs ./bin/www",
-    "debug": "nodemon --inspect=9310 --watch controllers/ --watch helpers/ --watch views/ --ext js,hbs ./bin/www",
+    "watch": "nodemon --watch ./ --watch views --watch controllers --watch build --watch helpers --ext js,hbs,json ./bin/www",
+    "debug": "nodemon --inspect=9310 --watch controllers --watch helpers --watch views --watch helpers --ext js,hbs,json ./bin/www",
     "watch-reload": "gulp watch-reload",
     "lint": "eslint ./bin ./controllers ./helpers ./test/mocha ./api.js ./app.js --ext .js --fix",
     "sasslint": "sass-lint -q -v",
