airbnb eslint config mod tab instead of spaces disable lint check within npm test add editorconfig to repo

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "sasslint": "sass-lint -q -v",
     "sasslint:fix": "sass-lint-auto-fix -s -c ./.sass-lint-auto-fix.yml && sass-lint -q -v",
     "startd": "echo 'Do you mean 'npm run watch'?'",
-    "test": "npm run lint && npm run mocha",
+    "test": "npm run mocha",
     "mocha": "mocha test/mocha/ --recursive",
     "coverage": "NODE_ENV=test istanbul cover node_modules/.bin/_mocha -- -- test/**/*.test.js",
     "frontendTests": "./node_modules/.bin/nightwatch --config nightwatch.conf.js --env chrome,firefox"
@@ -74,7 +74,9 @@
     "chai-http": "^3.0.0",
     "chromedriver": "^2.38.3",
     "env2": "^2.2.0",
-    "eslint": "^3.17.1",
+    "eslint": "^5.10.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "expose-loader": "^0.7.5",
     "geckodriver": "^1.11.0",
     "gulp": "^3.9.1",
