added vue components to client

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "string-strip-html": "^3.2.0",
     "string_decoder": "^1.0.1",
     "truncate-html": "^1.0.0",
+    "vue": "^2.5.16",
     "winston": "^3.0.0"
   },
   "devDependencies": {
@@ -73,6 +74,7 @@
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "chromedriver": "^2.38.3",
+    "css-loader": "^1.0.0",
     "env2": "^2.2.0",
     "eslint": "^3.17.1",
     "expose-loader": "^0.7.5",
@@ -104,10 +106,14 @@
     "rebuild-changed-entrypoints-webpack-plugin": "^1.0.1",
     "sass-lint": "^1.12.1",
     "sass-lint-auto-fix": "^0.15.0",
+    "sass-loader": "^7.0.3",
     "script-loader": "^0.7.2",
     "selenium-server": "^3.12.0",
+    "style-loader": "^0.21.0",
     "vinyl-map": "^1.0.2",
     "vinyl-named": "^1.1.0",
+    "vue-loader": "^15.2.4",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^4.16.1",
     "webpack-stream": "^4.0.3",
     "workbox-build": "^3.4.1",
