--- a/vue-courses/package.json
+++ b/vue-courses/package.json
@@ -14,20 +14,20 @@
     "vue": "^2.5.17"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.2.0",
-    "@vue/cli-plugin-eslint": "^3.2.0",
-    "@vue/cli-service": "^3.2.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0-0",
-    "vue-template-compiler": "^2.5.17",
-    "@storybook/vue": "^4.1.1",
+    "@babel/core": "^7.2.0",
     "@storybook/addon-actions": "^4.1.1",
     "@storybook/addon-links": "^4.1.1",
     "@storybook/addons": "^4.1.1",
+    "@storybook/vue": "^4.1.1",
+    "@vue/cli-plugin-babel": "^3.2.0",
+    "@vue/cli-plugin-eslint": "^3.2.1",
+    "@vue/cli-service": "^3.2.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
     "babel-preset-vue": "^2.0.2",
-    "@babel/core": "^7.2.0",
-    "babel-loader": "^8.0.4"
+    "eslint": "^5.8.0",
+    "eslint-plugin-vue": "^5.0.0-0",
+    "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
     "root": true,
