--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "serve-favicon": "~2.3.2",
     "shortid": "^2.2.8",
     "showdown": "^1.7.1",
-    "static-expiry": "0.0.11",
+    "@tofixx/static-expiry": "1.0.2",
     "string-strip-html": "^3.2.0",
     "string_decoder": "^1.0.1",
     "truncate-html": "^1.0.0",
