--- a/storybook/package.json
+++ b/storybook/package.json
@@ -10,6 +10,10 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-regular-svg-icons": "^5.6.3",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/vue-fontawesome": "^0.1.5",
     "ajv": "^5.5.2",
     "vue": "^2.5.17"
   },
