--- a/package.json
+++ b/package.json
@@ -18,20 +18,21 @@
   },
   "sasslintConfig": "./.sass-lint.yml",
   "dependencies": {
-    "body-parser": "~1.16.0",
-    "browser-sync": "^2.24.7",
+    "body-parser": "^1.18.3",
+    "browser-sync": "^2.26.3",
     "compression": "^1.6.2",
     "cookie-parser": "~1.4.3",
     "csv-parse": "^1.2.0",
     "debug": "~2.6.0",
     "diff-dom": "^2.4.0",
-    "express": "~4.14.1",
+    "express": "^4.16.4",
     "express-session": "^1.15.2",
     "fast-csv": "^2.4.1",
+    "feed-read": "0.0.1",
     "feedr": "^2.13.5",
     "font-awesome": "^4.7.0",
     "fullcalendar": "^3.9.0",
-    "gulp-nodemon": "^2.2.1",
+    "gulp-nodemon": "^2.4.2",
     "handlebars-layouts": "^3.1.4",
     "handlebars-wax": "^5.1.1",
     "hbs": "~4.0.1",
@@ -44,8 +45,9 @@
     "maxmind": "^2.3.0",
     "method-override": "^2.3.7",
     "moment": "^2.22.2",
-    "morgan": "~1.7.0",
+    "morgan": "^1.9.1",
     "multer": "^1.3.0",
+    "natives": "^1.1.6",
     "nexboard-api-js": "git://github.com/schul-cloud/nexboard-api-js.git",
     "oauth-1.0a": "^2.1.0",
     "path.join": "^1.0.0",
@@ -56,7 +58,7 @@
     "react-sortable-hoc": "^0.8.3",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
-    "serve-favicon": "~2.3.2",
+    "serve-favicon": "^2.5.0",
     "shortid": "^2.2.8",
     "showdown": "^1.7.1",
     "string-strip-html": "^3.2.0",
