Testing storybook addons

--- a/storybook/package.json
+++ b/storybook/package.json
@@ -19,8 +19,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
+    "@storybook/addon-a11y": "^4.1.7",
     "@storybook/addon-actions": "^4.1.1",
+    "@storybook/addon-cssresources": "^4.1.7",
+    "@storybook/addon-events": "^4.1.7",
+    "@storybook/addon-knobs": "^4.1.7",
     "@storybook/addon-links": "^4.1.1",
+    "@storybook/addon-notes": "^4.1.7",
+    "@storybook/addon-storysource": "^4.1.7",
     "@storybook/addons": "^4.1.1",
     "@storybook/vue": "^4.1.1",
     "@vue/cli-plugin-babel": "^3.2.0",
