remove external link modal and add iframe as nice to have feature.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "express": "^4.16.4",
     "express-session": "^1.15.2",
     "fast-csv": "^2.4.1",
-    "feed-read": "0.0.1",
     "feedr": "^2.13.5",
     "font-awesome": "^4.7.0",
     "fullcalendar": "^3.9.0",
@@ -58,6 +57,7 @@
     "react-sortable-hoc": "^0.8.3",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
+    "rss-parser": "^3.6.2",
     "serve-favicon": "^2.5.0",
     "shortid": "^2.2.8",
     "showdown": "^1.7.1",
