--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,14 @@ language: node_js
 node_js:
 - '8'
 sudo: required
+
+services:
+  - docker
+  
+env:
+  global:
+    - GIT_SHA=$(git rev-parse HEAD)
+
 addons:
   chrome: stable
   firefox: latest
@@ -33,3 +41,9 @@ script:
 cache:
   directories:
   - node_modules
+
+deploy:
+ provider: script
+  script: ./deploy.sh
+  on:
+   branch: development
