--- a/storybook/package.json
+++ b/storybook/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.6.3",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/vue-fontawesome": "^0.1.5",
+    "@storybook/addon-centered": "^4.1.9",
     "ajv": "^5.5.2",
     "vue": "^2.5.17"
   },
