--- a/storybook/package.json
+++ b/storybook/package.json
@@ -28,6 +28,7 @@
     "@storybook/addon-links": "^4.1.1",
     "@storybook/addon-notes": "^4.1.7",
     "@storybook/addon-storysource": "^4.1.7",
+    "@storybook/addon-viewport": "^4.1.11",
     "@storybook/addons": "^4.1.1",
     "@storybook/vue": "^4.1.1",
     "@vue/cli-plugin-babel": "^3.2.0",
