--- a/storybook/package.json
+++ b/storybook/package.json
@@ -15,19 +15,19 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "@storybook/addon-centered": "^4.1.9",
-    "ajv": "^5.5.2",
+    "ajv": "^6.7.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
-    "@storybook/addon-a11y": "^4.1.7",
+    "@storybook/addon-a11y": "^4.1.11",
     "@storybook/addon-actions": "^4.1.1",
     "@storybook/addon-cssresources": "^4.1.7",
     "@storybook/addon-events": "^4.1.7",
     "@storybook/addon-knobs": "^4.1.7",
     "@storybook/addon-links": "^4.1.1",
     "@storybook/addon-notes": "^4.1.7",
-    "@storybook/addon-storysource": "^4.1.7",
+    "@storybook/addon-storysource": "^4.1.11",
     "@storybook/addon-viewport": "^4.1.11",
     "@storybook/addons": "^4.1.1",
     "@storybook/vue": "^4.1.1",
@@ -41,6 +41,7 @@
     "eslint-plugin-vue": "^5.0.0-0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
+    "storybook-addon-vue-info": "^0.7.1",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
