--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
-# decrypt ssh-key
-  - openssl aes-256-cbc -k "$super_secret_password" -in travis_rsa.enc -out travis_rsa -d 
+  # decrypt ssh-key
+  #- openssl aes-256-cbc -k "$super_secret_password" -in travis_rsa.enc -out travis_rsa -d 
 install:
   - npm install
 before_script:
@@ -43,9 +43,9 @@ cache:
   directories:
     - node_modules
 
-deploy:
-  provider: script
-  script: ./deploy.sh
-  on:
-   all_branches: true
-   condition: $TRAVIS_BRANCH =~ ^development|N21/merge$
+#deploy:
+#  provider: script
+#  script: ./deploy.sh
+#  on:
+#   all_branches: true
+#   condition: $TRAVIS_BRANCH =~ ^development|N21/merge$
