.travis.yml mit git-sha

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ sudo: required
 services:
 - docker
 env:
+  global:
+    - GIT_SHA=$(git rev-parse HEAD)
+env:
 - SC_DEMO_USER_PASSWORD=schulcloud
 - BACKEND_URL=https://api.niedersachsen.cloud
 - PUBLIC_BACKEND_URL=https://api.niedersachsen.cloud
