--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "moment": "^2.22.2",
     "morgan": "~1.7.0",
     "multer": "^1.3.0",
+    "natives": "^1.1.6",
     "nexboard-api-js": "git://github.com/schul-cloud/nexboard-api-js.git",
     "oauth-1.0a": "^2.1.0",
     "path.join": "^1.0.0",
