--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node ./bin/www",
     "watch": "nodemon --watch ./ --watch views --watch controllers --watch build --watch helpers --ext js,hbs,json ./bin/www",
     "debug": "nodemon --inspect=9310 --watch controllers --watch helpers --watch views --watch helpers --ext js,hbs,json ./bin/www",
+    "dev:editor": "parcel editor/index.html -d build/default/editor --open",
+    "watch:editor": "parcel editor/index.html -d build/default/editor --public-url /editor/",
     "watch-reload": "gulp watch-reload",
     "lint": "eslint ./bin ./controllers ./helpers ./test/mocha ./api.js ./app.js --ext .js --fix",
     "sasslint": "sass-lint -q -v",
@@ -52,8 +54,8 @@
     "path.join": "^1.0.0",
     "query-string": "^5.0.1",
     "querystring": "^0.2.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "react-sortable-hoc": "^0.8.3",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
