--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,10 @@ services:
 env:
   global:
     - GIT_SHA=$( git rev-parse HEAD )
-    - SC_DEMO_USER_PASSWORD=schulcloud
+    - SC_DEMO_USER_PASSWORD=Schulcloud1!
     - BACKEND_URL=https://api.niedersachsen.cloud
     - PUBLIC_BACKEND_URL=https://api.niedersachsen.cloud
-#env:
-#- SC_DEMO_USER_PASSWORD=schulcloud
-#- BACKEND_URL=https://api.niedersachsen.cloud
-#- PUBLIC_BACKEND_URL=https://api.niedersachsen.cloud
+    - FEATURE_TEAMS_ENABLED=true
 addons:
   chrome: stable
   firefox: latest
@@ -55,4 +52,3 @@ deploy:
   on:
    all_branches: true
    condition: $TRAVIS_BRANCH =~ ^development|N21/merge$
-
