open schul-cloud

--- a/theme/open/static/images/manifest.json
+++ b/theme/open/static/images/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Open-Cloud",
-    "short_name": "Open-Cloud",
+    "name": "Open Schul-Cloud",
+    "short_name": "Open Schul-Cloud",
     "icons": [
         {
             "src": "/images/logo/favicon-16.png",
