--- a/Dockerfile.n21
+++ b/Dockerfile.n21
@@ -11,7 +11,7 @@ RUN npm install -g nodemon gulp-cli && npm install
 
 COPY . .
 
-ENV SC_THEME=default
+ENV SC_THEME=n21
 RUN gulp && rm .gulp-changed-smart.json
 
 VOLUME /home/node/app/build
