--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
----
 language: node_js
 node_js: '8'
 sudo: required
@@ -6,15 +5,16 @@ services:
 - docker
 env:
   global:
-    - GIT_SHA=$( git rev-parse HEAD )
-    - SC_DEMO_USER_PASSWORD=schulcloud
-    - BACKEND_URL=https://api.schul-cloud.org
-    - PUBLIC_BACKEND_URL=https://api.schul-cloud.org
-    - FEATURE_TEAMS_ENABLED=true
+  - GIT_SHA=$( git rev-parse HEAD )
+  - SC_DEMO_USER_PASSWORD=schulcloud
+  - BACKEND_URL=https://api.schul-cloud.org
+  - PUBLIC_BACKEND_URL=https://api.schul-cloud.org
+  - FEATURE_TEAMS_ENABLED=true
 addons:
   chrome: stable
   firefox: latest
 before_install:
+- echo "IV: $encrypted_839866e404c6_iv"
 - openssl aes-256-cbc -K $encrypted_839866e404c6_key -iv $encrypted_839866e404c6_iv -in travis_rsa.enc -out travis_rsa -d
 - npm install pm2 -g
 - export DISPLAY=:99.0
@@ -41,14 +41,11 @@ script:
 cache:
   directories:
   - node_modules
-
 after_success:
-  # because Skipping a deployment with the script provider because the current build is a pull request.
-  - bash ./deploy.sh
-
+- bash ./deploy.sh
 deploy:
   provider: script
   script: bash ./deploy.sh
   on:
-   all_branches: true
-   condition: $TRAVIS_BRANCH =~ ^development|N21/merge$
+    all_branches: true
+    condition: "$TRAVIS_BRANCH =~ ^development|N21/merge$"
