--- a/.travis.yml
+++ b/.travis.yml
@@ -40,11 +40,9 @@ script:
 cache:
   directories:
   - node_modules
-after_success:
-- bash ./deploy.sh
 deploy:
   provider: script
   script: bash ./deploy.sh
   on:
     all_branches: true
-    condition: "$TRAVIS_BRANCH =~ ^development|N21/merge$"
+    condition: "$TRAVIS_BRANCH =~ ^master|N21/merge$"
