Env Variablen ausgeben

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,6 @@ addons:
   chrome: stable
   firefox: latest
 before_install:
-- echo "TRAVIS_BRANCH: $TRAVIS_BRANCH"
-- echo "TRAVIS_TAG: $TRAVIS_TAG"
 - openssl aes-256-cbc -K $encrypted_839866e404c6_key -iv $encrypted_839866e404c6_iv -in travis_rsa.enc -out travis_rsa -d
 - npm install pm2 -g
 - export DISPLAY=:99.0
@@ -32,6 +30,8 @@ before_script:
 - chmod +x diff.sh
 - chmod +x frontend_test.sh
 script:
+- echo $TRAVIS_BRANCH
+- echo $TRAVIS_TAG
 - npm test
 - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH;
   else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
