--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "string-strip-html": "^3.2.0",
     "string_decoder": "^1.0.1",
     "truncate-html": "^1.0.0",
+    "vue": "^2.6.10",
+    "vue-infinite-loading": "^2.4.3",
     "winston": "^3.0.0"
   },
   "devDependencies": {
