--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "watch": "nodemon --watch ./ --watch views/ --watch controllers/ --watch build/ --ext js,hbs ./bin/www",
-    "debug": "SW_ENABLED=1 NOTIFICATION_SERVICE_ENABLED=1 SW_ENABLED=1 nodemon --inspect=9310 --watch controllers/ --watch helpers/ --watch views/ --ext js,hbs ./bin/www",
+    "debug": "NODE_ENV=debug NOTIFICATION_SERVICE_ENABLED=1 SW_ENABLED=1 nodemon --inspect=9310 --watch controllers/ --watch helpers/ --watch views/ --ext js,hbs ./bin/www",
     "watch-reload": "gulp watch-reload",
     "lint": "eslint ./controllers ./helpers ./test/mocha ./api.js ./app.js --ext .js --fix",
     "sasslint": "sass-lint -q -v",
