--- a/Dockerfile.brb
+++ b/Dockerfile.brb
@@ -12,7 +12,7 @@ RUN npm install -g nodemon gulp-cli && npm install
 COPY . .
 #COPY ./localtime /etc/localtime
 
-ENV SC_THEME=n21
+ENV SC_THEME=brb
 ENV TZ=Europe/Berlin
 
 RUN gulp && rm .gulp-changed-smart.json
