mongo:4.0 statt mongo:2.6 und deploystage

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js: '8'
 sudo: required
-if: branch = master OR type = pull_request
+#if: branch = master OR type = pull_request
 services:
 - docker
 env:
@@ -21,6 +21,8 @@ before_install:
 - sh -e /etc/init.d/xvfb start
 - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile
   --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+- sudo docker pull mongo:4.0
+- sudo docker run -d -p 27017:27017 mongo:4.0
 install:
 - npm install
 before_script:
@@ -44,11 +46,11 @@ cache:
   directories:
   - node_modules
 after_success:
-- bash ./deploy.sh
+#- bash ./deploy.sh
 
-#deploy:
-#  provider: script
-#  script: bash ./deploy.sh
+deploy:
+  provider: script
+  script: bash ./deploy.sh
 #  on:
 #    all_branches: true
 #    condition: "$TRAVIS_BRANCH =~ ^master|N21/merge$"
