allow to deploy all branches in travis, deploy script does case distinction

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ cache:
 deploy:
   provider: script
   script: bash ./deploy.sh
-#  on:
-#    all_branches: true
+  on:
+    all_branches: true
 #    condition: "$TRAVIS_BRANCH =~ ^master|N21/merge$"
 #
