--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "sasslint": "sass-lint -q -v",
     "sasslint:fix": "sass-lint-auto-fix -s -c ./.sass-lint-auto-fix.yml && sass-lint -q -v",
     "startd": "echo 'Do you mean 'npm run watch'?'",
-    "test": "npm run mocha",
+    "test": "npm run coverage",
     "mocha": "mocha test/mocha/ --recursive",
-    "coverage": "NODE_ENV=test istanbul cover node_modules/.bin/_mocha -- -- test/**/*.test.js",
+    "coverage": "NODE_ENV=test istanbul cover node_modules/.bin/_mocha --report lcovonly -- -- test/**/*.test.js",
+    "coverage-codecov": "cross-env NODE_ENV=test istanbul report --reporter=text-lcov | codecov --pipe",
     "frontendTests": "./node_modules/.bin/nightwatch --config nightwatch.conf.js --env chrome,firefox"
   },
   "sasslintConfig": "./.sass-lint.yml",
@@ -75,6 +76,7 @@
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "chromedriver": "^2.38.3",
+    "codecov": "^3.5.0",
     "env2": "^2.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
