--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: node_js
 node_js: '8'
 sudo: required
-
+branches:
+  only:
+    - develop
+    - master
+	- /^([rR]elease|[hH]otfix)\/[0-9]+\.[0-9]+\.[0-9]+$/
 services:
 - docker
 env:
