--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "sasslint:fix": "sass-lint-auto-fix -s -c ./.sass-lint-auto-fix.yml && sass-lint -q -v",
     "startd": "echo 'Do you mean 'npm run watch'?'",
     "test": "npm run mocha",
-    "mocha": "mocha test/mocha/ --recursive",
-    "coverage": "NODE_ENV=test istanbul cover node_modules/.bin/_mocha -- -- test/**/*.test.js",
+    "mocha": "mocha test/mocha/ --recursive --opts ./test/mocha/mocha.opts",
+    "coverage": "NODE_ENV=test istanbul cover node_modules/.bin/_mocha -- -- test/**/*.test.js --opts ./test/mocha/mocha.opts",
     "frontendTests": "./node_modules/.bin/nightwatch --config nightwatch.conf.js --env chrome,firefox"
   },
   "sasslintConfig": "./.sass-lint.yml",
