--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "sass-lint-auto-fix": "^0.17.0",
     "script-loader": "^0.7.2",
     "selenium-server": "^3.12.0",
+    "vinyl-fs": "^3.0.3",
     "vinyl-map": "^1.0.2",
     "vinyl-named": "^1.1.0",
     "webpack": "^4.16.1",
