--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "npm run mocha",
     "mocha": "mocha test/mocha/ --recursive --opts ./test/mocha/mocha.opts",
     "coverage": "NODE_ENV=test istanbul cover node_modules/.bin/_mocha -- -- test/**/*.test.js --opts ./test/mocha/mocha.opts",
-    "frontendTests": "./node_modules/.bin/nightwatch --config nightwatch.conf.js --env chrome,firefox"
+    "frontendTests": "./node_modules/.bin/nightwatch --config nightwatch.conf.js --env chrome,firefox",
+    "version": "git rev-parse HEAD > version"
   },
   "sasslintConfig": "./.sass-lint.yml",
   "dependencies": {
