--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "watch": "nodemon --watch ./ --watch views --watch controllers --watch build --watch helpers --ext js,hbs,json ./bin/www",
-    "debug": "nodemon --inspect=9310 --watch controllers --watch helpers --watch views --watch helpers --ext js,hbs,json ./bin/www",
+    "debug": "nodemon --inspect=9310 --watch app.js --watch middleware --watch controllers --watch helpers --watch views --watch helpers --ext js,hbs,json ./bin/www",
     "lint": "eslint ./bin ./controllers ./helpers ./test/mocha ./api.js ./app.js --ext .js --fix",
     "sasslint": "sass-lint -q -v",
     "sasslint:fix": "sass-lint-auto-fix -s -c ./.sass-lint-auto-fix.yml && sass-lint -q -v",
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "browser-sync": "^2.26.7",
     "compression": "^1.6.2",
+    "config": "^3.2.2",
     "cookie-parser": "~1.4.3",
     "csurf": "^1.9.0",
     "csv-parse": "^1.2.0",
@@ -33,6 +34,7 @@
     "font-awesome": "^4.7.0",
     "fullcalendar": "^3.9.0",
     "gulp-nodemon": "^2.2.1",
+    "handlebars": "^4.1.2",
     "handlebars-layouts": "^3.1.4",
     "handlebars-wax": "^5.1.1",
     "hbs": "^4.0.4",
