--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ branches:
     - develop
     - master
     - /^([rR]elease|[hH]otfix)\/[0-9]+\.[0-9]+\.[0-9]+$/
+    - /^greenkeeper/.*$/
 services:
 - docker
 env:
