--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "watch": "nodemon --watch ./ --watch views --watch controllers --watch build --watch helpers --ext js,hbs,json ./bin/www",
-    "debug": "nodemon --inspect=9310 --watch controllers --watch helpers --watch views --watch helpers --ext js,hbs,json ./bin/www",
+    "watch": "nodemon --watch ./ --watch views --watch theme --watch controllers --watch build --watch helpers --ext js,hbs,json ./bin/www",
+    "debug": "nodemon --inspect=9310 --watch controllers --watch theme --watch views --watch helpers --ext js,hbs,json ./bin/www",
     "lint": "eslint ./bin ./controllers ./helpers ./test/mocha ./api.js ./app.js --ext .js --fix",
     "sasslint": "sass-lint -q -v",
     "sasslint:fix": "sass-lint-auto-fix -s -c ./.sass-lint-auto-fix.yml && sass-lint -q -v",
