--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ branches:
   only:
     - develop
     - master
-    - /^([rR]elease|[hH]otfix)\/[0-9]+\.[0-9]+\.[0-9]+$/
+    - /^(release|hotfix).*$/i
 services:
 - docker
 env:
