--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
   chrome: stable
   firefox: latest
 before_install:
+  - mkdir schulcloud-client
   - mv !(schulcloud-client) schulcloud-client
   - git clone https://github.com/schul-cloud/schulcloud-server.git schulcloud-server
   - git clone https://github.com/schul-cloud/docker-compose.git docker-compose
