--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint ./bin ./controllers ./helpers ./test/mocha ./api.js ./app.js --ext .js --fix",
     "sasslint": "sass-lint -q -v",
     "sasslint:fix": "sass-lint-auto-fix -s -c ./.sass-lint-auto-fix.yml && sass-lint -q -v",
-    "startd": "echo 'Do you mean 'npm run watch'?'",
+    "startd": "echo 'Do you mean 'npm run watch'?'"
   },
   "sasslintConfig": "./.sass-lint.yml",
   "dependencies": {
