--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "sasslintConfig": "./.sass-lint.yml",
   "dependencies": {
     "@sentry/browser": "^5.6.1",
+    "@sentry/node": "^5.6.1",
     "acorn": "^6.0.0",
     "body-parser": "^1.19.0",
     "browser-sync": "^2.26.7",
