--- a/.travis.yml
+++ b/.travis.yml
@@ -2,57 +2,54 @@ language: node_js
 node_js: '10'
 sudo: required
 branches:
-	only:
-		- develop
-		- master
-		- /^(?i:release|hotfix).*$/
+  only:
+    - develop
+    - master
+    - /^(?i:release|hotfix).*$/
 services:
-	- docker
+  - docker
 env:
-	global:
-		- GIT_SHA=$( git rev-parse HEAD )
-		- SC_DEMO_USER_PASSWORD=schulcloud
-		- BACKEND_URL=https://api.schul-cloud.org
-		- PUBLIC_BACKEND_URL=https://api.schul-cloud.org
-		- FEATURE_TEAMS_ENABLED=true
-		- IT_CLIENT_HOST=client
-addons:
-	chrome: stable
-	firefox: latest
+  global:
+    - GIT_SHA=$( git rev-parse HEAD )
+    - SC_DEMO_USER_PASSWORD=schulcloud
+    - BACKEND_URL=https://api.schul-cloud.org
+    - PUBLIC_BACKEND_URL=https://api.schul-cloud.org
+    - FEATURE_TEAMS_ENABLED=true
+    - IT_CLIENT_HOST=client
 before_install:
-	- openssl aes-256-cbc -K $encrypted_839866e404c6_key -iv $encrypted_839866e404c6_iv -in travis_rsa.enc -out travis_rsa -d
-	# TODO ask @falko what is this doing and for what?
-	# - export DISPLAY=:99.0
-	# - sh -e /etc/init.d/xvfb start
-	# - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile
-	--background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
-	- mkdir schulcloud-client
-	- mv !(schulcloud-client) schulcloud-client
-	- git clone https://github.com/schul-cloud/schulcloud-server.git schulcloud-server
-	- git clone https://github.com/schul-cloud/docker-compose.git docker-compose
-	- git clone https://github.com/schul-cloud/integration-tests.git integration-tests
+  - openssl aes-256-cbc -K $encrypted_839866e404c6_key -iv $encrypted_839866e404c6_iv -in travis_rsa.enc -out travis_rsa -d
+  # TODO ask @falko what is this doing and for what?
+  # - export DISPLAY=:99.0
+  # - sh -e /etc/init.d/xvfb start
+  # - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile
+  # --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+  - mkdir schulcloud-client
+  - mv !(schulcloud-client) schulcloud-client
+  - git clone https://github.com/schul-cloud/schulcloud-server.git schulcloud-server
+  - git clone https://github.com/schul-cloud/docker-compose.git docker-compose
+  - git clone https://github.com/schul-cloud/integration-tests.git integration-tests
 install:
-	- cd docker-compose && docker-compose -f docker-compose.integration-test.yml up -d && cd ..
-	- cd schulcloud-client && npm ci && cd .. # client packages are needed for mocha
-	- cd integration-tests && npm ci && cd ..
-	- cd schulcloud-server && npm run setup && cd ..
+  - cd docker-compose && docker-compose -f docker-compose.integration-test.yml up -d && cd ..
+  - cd schulcloud-client && npm ci && cd .. # client packages are needed for mocha
+  - cd integration-tests && npm ci && cd ..
+  - cd schulcloud-server && npm run setup && cd ..
 script:
-	- echo $TRAVIS_BRANCH
-	- echo $TRAVIS_TAG
-	- cd schulcloud-client && npm run mocha && cd ..
-	# early report status
-	# I don't think we need it, the tests are fast, the setup is slow
-	# - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH;
-	# else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
-	# run integration tests
-	- cd integration-tests && npm run all && cd ..
+  - echo $TRAVIS_BRANCH
+  - echo $TRAVIS_TAG
+  - cd schulcloud-client && npm run mocha && cd ..
+  # early report status
+  # I don't think we need it, the tests are fast, the setup is slow
+  # - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH;
+  # else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
+  # run integration tests
+  - cd integration-tests && npm run all && cd ..
 cache:
-	directories:
-		- schulcloud-client/node_modules
-		- integration-tests/node_modules
+  directories:
+    - schulcloud-client/node_modules
+    - integration-tests/node_modules
 deploy:
-	provider: script
-	script: bash ./deploy.sh
-	on:
-		all_branches: true
-		# condition: "$TRAVIS_BRANCH =~ ^master|N21/merge$"
+  provider: script
+  script: bash ./deploy.sh
+  on:
+    all_branches: true
+    # condition: "$TRAVIS_BRANCH =~ ^master|N21/merge$"
