create dir only if not exists

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
   # - sh -e /etc/init.d/xvfb start
   # - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile
   # --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
-  - mkdir schulcloud-client
+  - mkdir -p schulcloud-client
   - mv !(schulcloud-client) schulcloud-client
   - git clone https://github.com/schul-cloud/schulcloud-server.git schulcloud-server
   - git clone https://github.com/schul-cloud/docker-compose.git docker-compose
