--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "sasslintConfig": "./.sass-lint.yml",
   "dependencies": {
     "@sentry/browser": "^5.6.1",
+    "@sentry/integrations": "^5.6.1",
     "@sentry/node": "^5.6.1",
     "acorn": "^6.0.0",
     "body-parser": "^1.19.0",
