--- a/.travis.yml
+++ b/.travis.yml
@@ -16,15 +16,10 @@ env:
     - PUBLIC_BACKEND_URL=https://api.schul-cloud.org
     - FEATURE_TEAMS_ENABLED=true
     - IT_CLIENT_HOST=client
+	- BRANCH_NAME=${TRAVIS_PULL_REQUEST_BRANCH:=$TRAVIS_BRANCH}
 before_install:
   - openssl aes-256-cbc -K $encrypted_839866e404c6_key -iv $encrypted_839866e404c6_iv -in travis_rsa.enc -out travis_rsa -d
-  # TODO ask @falko what is this doing and for what?
-  # - export DISPLAY=:99.0
-  # - sh -e /etc/init.d/xvfb start
-  # - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile
-  # --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
-  - export BRANCH_NAME=${TRAVIS_PULL_REQUEST_BRANCH:=$TRAVIS_BRANCH}
-  - echo "client-branch $BRANCH_NAME"
+  - echo $BRANCH_NAME
   - mkdir -p schulcloud-client
   - mv !(schulcloud-client) schulcloud-client
   - git clone https://github.com/schul-cloud/schulcloud-server.git schulcloud-server
@@ -42,11 +37,6 @@ script:
   - echo $TRAVIS_BRANCH
   - echo $TRAVIS_TAG
   - cd schulcloud-client && npm run mocha && cd ..
-  # early report status
-  # I don't think we need it, the tests are fast, the setup is slow
-  # - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH;
-  # else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
-  # run integration tests
   - cd integration-tests && npm run all && cd ..
 cache:
   directories:
