--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: node_js
 node_js: '10'
 sudo: required
-branches:
-  only:
-    - develop
-    - master
-    - /^(?i:release|hotfix).*$/
+# branches:
+#   only:
+#     - develop
+#     - master
+#     - /^(?i:release|hotfix).*$/
 services:
   - docker
 env:
@@ -16,8 +16,8 @@ env:
     - PUBLIC_BACKEND_URL=https://api.schul-cloud.org
     - FEATURE_TEAMS_ENABLED=true
     - IT_CLIENT_HOST=client
-	#- BRANCH_NAME=${TRAVIS_PULL_REQUEST_BRANCH:=$TRAVIS_BRANCH}
-	- BRANCH_NAME=master
+    #- BRANCH_NAME=${TRAVIS_PULL_REQUEST_BRANCH:=$TRAVIS_BRANCH}
+    - BRANCH_NAME=master
 before_install:
   - openssl aes-256-cbc -K $encrypted_839866e404c6_key -iv $encrypted_839866e404c6_iv -in travis_rsa.enc -out travis_rsa -d
   - echo $BRANCH_NAME
@@ -43,13 +43,13 @@ script:
   - echo $TRAVIS_TAG
   - cd schulcloud-client && npm run mocha && cd ..
   - cd integration-tests && npm run all && cd ..
-cache:
-  directories:
-    - schulcloud-client/node_modules
-    - integration-tests/node_modules
-deploy:
-  provider: script
-  script: bash ./deploy.sh
-  on:
-    all_branches: true
-    # condition: "$TRAVIS_BRANCH =~ ^master|N21/merge$"
+# cache:
+#   directories:
+#     - schulcloud-client/node_modules
+#     - integration-tests/node_modules
+# deploy:
+#   provider: script
+#   script: bash ./deploy.sh
+#   on:
+#     all_branches: true
+#     # condition: "$TRAVIS_BRANCH =~ ^master|N21/merge$"
