--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ install:
   # client packages are needed for mocha
   - cd schulcloud-client && npm ci && cd ..
   # dependencies for integration tests
-  - docker-compose -f docker-compose/docker-compose.integration-test.yml up -d
+  - cd docker-compose && docker-compose -f docker-compose.integration-test.yml up -d && cd ..
   - cd integration-tests && npm ci && cd ..
   - cd schulcloud-server && npm run setup && cd .. # initially seed database
 script:
